{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 85,
  "lineage": "505bb69e-63ca-4666-4e83-89deb2dd9b7f",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "abele-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/publicIPAddresses/abele-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.18.140",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "abele-ip",
            "resource_group_name": "abele-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "abele-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/networkInterfaces/abele-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/publicIPAddresses/abele-ip",
                "subnet_id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/virtualNetworks/abele-network/subnets/abele-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-1E-52-18-F6-2E",
            "name": "abele-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "abele-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Compute/virtualMachines/abele-vm"
          },
          "dependencies": [
            "azurerm_public_ip.abele-ip",
            "azurerm_resource_group.abele-rg",
            "azurerm_subnet.abele-subnet",
            "azurerm_virtual_network.abele-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "abele-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/networkSecurityGroups/abele-nsg",
            "location": "eastus",
            "name": "abele-nsg",
            "resource_group_name": "abele-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "abele-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.abele-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "abele-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/networkSecurityGroups/abele-nsg/securityRules/abele-dev-rule",
            "name": "abele-dev-rule",
            "network_security_group_name": "abele-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "abele-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.abele-nsg",
            "azurerm_resource_group.abele-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "abele-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/publicIPAddresses/abele-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.18.140",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "abele-ip",
            "resource_group_name": "abele-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.abele-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "abele-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/virtualNetworks/abele-network/subnets/abele-subnet",
            "name": "abele-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "abele-resources",
            "virtual_network_name": "abele-network"
          },
          "dependencies": [
            "azurerm_resource_group.abele-rg",
            "azurerm_virtual_network.abele-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/virtualNetworks/abele-network/subnets/abele-subnet",
            "network_security_group_id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/networkSecurityGroups/abele-nsg",
            "subnet_id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/virtualNetworks/abele-network/subnets/abele-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.abele-nsg",
            "azurerm_resource_group.abele-rg",
            "azurerm_subnet.abele-subnet",
            "azurerm_virtual_network.abele-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "abele-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e289341a-9f50-451c-88c4-1c6c49b6b25c",
            "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/virtualNetworks/abele-network",
            "location": "eastus",
            "name": "abele-network",
            "resource_group_name": "abele-resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.123.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/virtualNetworks/abele-network/subnets/abele-subnet",
                "name": "abele-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/b7f30b5d-3efd-45ad-9985-8824b8e55919/resourceGroups/abele-resources/providers/Microsoft.Network/networkSecurityGroups/abele-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.abele-rg"
          ]
        }
      ]
    }
  ]
}